syntax = "proto3";
package go.micro.srv.requestapi;
option go_package = "github.com/evilsocket/opensnitch/daemon/ui/protocol";

service SendAPI {
	rpc ProcessAPI(SendRequest) returns (GetRespons) {}
}

message SendRequest {
	string requestName = 1;
	string requestURL = 2;
	string requestMethod = 3;
	string contentType = 4; 
	map<string, string> body = 5; 
	map<string, string> header = 6;
	bool isPress = 7;
	string runTime = 8;
	string runTimes = 9;
	int64 Concurrency = 10;
}

message GetRespons {
     map<string,string> responsHeader = 1;
	 map<string,string> responsBody = 2;
	 int64 statusCode = 3;
	 bool isPress = 4;
	 map<string, string> tpsSet = 5;
	 map<string, string> executeNum = 6;
	 map<string, string> responseTime = 7;
	 float exeuteTime = 8;
}